Contact section & home updates

--- a/src/app/features/about/about-page/about-page.html
+++ b/src/app/features/about/about-page/about-page.html
@@ -1,27 +1,37 @@
 <div>
     <section class="min-h-screen w-full grid grid-cols-1 md:grid-cols-2">
-        <div class="flex flex-col justify-center px-6 md:px-12 lg:px-24 py-6 bg-neutral-50 text-left">
+        <div class="flex flex-col justify-center px-6 py-6  md:px-12 lg:px-24 bg-neutral-50 text-left">
             <h2
                 class="font-serif text-gray-900 text-4xl md:text-5xl lg:text-6xl font-light leading-tight tracking-tight">
-                Based in Guadalajara, Mexico — capturing memories worldwide.
+                Based in Guadalajara, Mexico &#8212; capturing memories worldwide.
             </h2>
             <p class="mt-6 text-sm md:text-base text-neutral-600 leading-relaxed max-w-md">
-                With over six years of photography experience, I've had the privilege of capturing stories across México
-                and around the world — from the cobblestone streets of Italy and Greece to the breathtaking landscapes
-                of Switzerland and Turkey.
+                With over six years of experience, I've had the privilege of documenting love stories from the vibrant
+                towns of México to the cobblestone streets of Italy and Greece, and the breathtaking landscapes of
+                Switzerland and Turkey.
+            </p>
+            <p class="mt-6 text-sm md:text-base text-neutral-600 leading-relaxed max-w-md">
+                Naturally social, I create a comfortable space where every couple feels at ease &#8212; whether you're
+                outgoing, reserved, or anywhere in between. From our first conversation to your wedding day, whether in
+                your hometown or a destination wedding abroad, I blend in seamlessly with guests to capture authentic,
+                candid moments.
+            </p>
+            <p class="mt-6 text-sm md:text-base text-neutral-600 leading-relaxed max-w-md">
+                My goal is simple: to preserve your story with artistry, skill, and soul &#8212; creating timeless memories
+                you'll cherish for a lifetime.
             </p>
             <div>
                 <div class="flex items-center gap-8 uppercase text-xs tracking-wider my-6">
                     <a href="" class="hover:underline">Instagram</a>
                     <a href="" class="hover:underline">Pinterest</a>
                 </div>
-                <app-buttons type="button" size="sm" variant="outline" color="neutral">
+                <app-buttons routerLink="/portfolio" type="button" size="sm" variant="outline" color="neutral">
                     View Portfolio <fa-icon [icon]="faArrow"></fa-icon>
                 </app-buttons>
             </div>
         </div>
         <div class="h-full flex justify-center items-center bg-neutral-100">
-            <img class="h-full w-2/3 md:w-3/4 object-contain drop-shadow-lg" src="assets/self-noback.png" alt="">
+            <img class="h-full w-2/3 md:w-3/4 object-contain drop-shadow-lg" src="assets/celeste-3.jpeg" alt="Celeste">
         </div>
     </section>
 
@@ -38,7 +48,8 @@
                 <i>Architecture</i> and a specialization in <b class="font-thin">Photography</b>
             </h2>
             <p class="mt-6 text-base text-neutral-700 leading-relaxed">
-                My work lives at the intersection of design and emotion—creating imagery that is both refined and deeply
+                My work lives at the intersection of design and emotion&#8212;creating imagery that is both refined and
+                deeply
                 resonant.
             </p>
         </div>
@@ -57,7 +68,7 @@
             <div routerLink="/portfolio/weddings"
                 class="h-46 md:h-58 p-6 aspect-square flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
                 <span class="text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
-                    Weddings 
+                    Weddings
                 </span>
                 <span class="flex justify-between items-center text-gray-600">
                     View Collection
@@ -68,7 +79,7 @@
             <div routerLink="/portfolio/engagements"
                 class="h-46 md:h-58 p-6 aspect-square flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
                 <span class="text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
-                    Engagements 
+                    Engagements
                 </span>
                 <span class="flex justify-between items-center text-gray-600">
                     View Collection
@@ -76,10 +87,10 @@
                 </span>
             </div>
 
-           <div routerLink="/portfolio/photoshoots"
+            <div routerLink="/portfolio/photoshoots"
                 class="h-46 md:h-58 p-6 aspect-square flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
                 <span class="text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
-                    Photoshoots 
+                    Photoshoots
                 </span>
                 <span class="flex justify-between items-center text-gray-600">
                     View Collection
@@ -120,7 +131,7 @@
 
     <section id="contact" class="min-h-screen flex flex-col justify-center px-6 bg-white">
         <div class="max-w-3xl mx-auto text-center">
-            <h2 class="text-4xl md:text-5xl font-serif mb-6">Let’s Create Together</h2>
+            <h2 class="text-4xl md:text-5xl font-serif mb-6">Let's Create Together</h2>
             <p class="text-lg text-gray-600 mb-10">
                 Ready to begin your story? Reach out for availability and bookings.
             </p>
