--- a/src/app/features/portfolio/portfolio-overview/portfolio-overview.html
+++ b/src/app/features/portfolio/portfolio-overview/portfolio-overview.html
@@ -40,7 +40,7 @@
 
                     <h3 class="font-serif text-xs tracking-wide">{{ img.title }}</h3>
                     <p class="italic text-sm">{{ img.location }}</p>
-                    <span class="my-2">—</span>
+                    <span class="my-2">&#8212;</span>
                     <span class="uppercase text-[11px] tracking-wider">View Gallery</span>
                 </div>
             </a>
