--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -15,7 +15,7 @@
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105"><a
                 routerLink="/portfolio">PORTFOLIO</a></li>
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
-            <a routerLink="/about">ABOUT</a>
+            <a routerLink="/details">DETAILS</a>
         </li>
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:scale-105">
             <a routerLink="/">
@@ -26,7 +26,7 @@
             <a routerLink="/booking">BOOKING</a>
         </li>
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
-            <a routerLink="/details">DETAILS</a>
+            <a routerLink="/about">ABOUT</a>
         </li>
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/contact">CONTACT</a>
@@ -68,7 +68,7 @@
         <mat-icon>menu</mat-icon>
         }
         @if (menuOpen) {
-        <mat-icon>menu</mat-icon>
+        <mat-icon>close</mat-icon>
         }
     </button>
 </nav>
@@ -76,7 +76,7 @@
 <!-- Mobile Menu -->
 @if (menuOpen) {
 <div
-    class="md:hidden absolute w-screen h-screen bg-white/80 shadow-md flex flex-col justify-center px-4 py-4 space-y-4 pointer-events-auto z-50">
+    class="md:hidden absolute w-screen h-screen bg-white/95 shadow-md flex flex-col justify-center px-4 py-4 space-y-4 pointer-events-auto z-50">
     <div class="flex flex-col items-center gap-8">
         <a routerLink="/" (click)="closeMenu()">HOME</a>
         <a routerLink="/portfolio" (click)="closeMenu()">PORTFOLIO</a>
