--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -1,20 +1,20 @@
 <section class="hero relative w-full h-[90vh] mb-8">
-    <img src="assets/welcome.jpg" alt="Hero cover"
-        class="absolute inset-0 w-full h-full object-cover object-center -z-10">
+    <img src="assets/hero-4.jpg" alt="Hero cover"
+        class="absolute inset-0 w-full h-full object-cover object-center  animate-fade-in -z-10">
 
-    <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/10 to-transparent -z-10"></div>
+     <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/10 to-transparent"></div>
 
-    <div class="relative z-10 flex flex-col justify-center h-full text-white uppercase px-6 md:px-20">
-        <h1 class="font-serif text-5xl md:text-6xl leading-tight">
-            <span class="block mb-4">Artistry</span>
-            <span class="block mb-4">Skill &</span>
-            <span class="block mb-8">Soul</span>
-        </h1>
-        <a routerLink="/booking"
-            class="inline-block underline underline-offset-8 decoration-2 transition-transform duration-500 hover:text-blue">
-            Book your date today
-        </a>
-    </div>
+  <div class="relative z-10 flex flex-col justify-center h-full text-white uppercase px-6 md:px-20 animate-slide-up">
+    <h1 class="font-serif text-5xl md:text-6xl leading-tight tracking-wide">
+      <span class="block mb-4">Artistry</span>
+      <span class="block mb-4">Skill &</span>
+      <span class="block mb-8">Soul</span>
+    </h1>
+    <a routerLink="/booking"
+       class="inline-block underline underline-offset-8 decoration-2 transition-transform duration-500 hover:text-blue">
+      Book your date today
+    </a>
+  </div>
 </section>
 
 <section class="portfolio py-10 mb-6">
@@ -22,7 +22,7 @@
         <div class="mb-12 text-left md:text-center">
             <h1 class="text-center uppercase mt-1 mb-6">Portfolio</h1>
             <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">
-                From intimate weddings to editorial portraits — explore a curated selection of my work
+                From intimate weddings to editorial portraits &#8212; explore a curated selection of my work
             </h2>
         </div>
 
@@ -54,11 +54,11 @@
         }
     </div>
 
-    <app-buttons routerLink="/portfolio" class="flex justify-center" variant="solid" color="primary" size="lg">View
+    <app-buttons routerLink="/portfolio" class="flex justify-center" variant="outline" color="neutral" size="md">View
         Portfolio</app-buttons>
 </section>
 
-<section class="booking py-10 mb-6">
+<!-- <section class="booking py-10 mb-6">
     <h1 class="text-center uppercase mt-1 mb-6">Booking</h1>
     <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">Book the Experience</h2>
     <div class="md:flex justify-center items-stretch gap-8 h-126 p-6">
@@ -97,49 +97,9 @@
                 </ul>
             </div>
             <div class="w-sm bg-cloud rounded-2xl">
-                <mat-calendar [(selected)]="selected" [minDate]="minDate"></mat-calendar>
+                <mat-calendar [(selected)]="selected" [minDate]="minDate" ngSkipHydration></mat-calendar>
             </div>
         </div>
-        <!-- <div class="w-xs rounded-2xl px-6 py-10 bg-blue-mid/20">
-            <form class="space-y-8">
-                <div>
-                    <label for="package" class="block mb-2 uppercase text-gray-600">
-                        Package
-                    </label>
-                    <select id="package" name="package"
-                        class="w-full border-b border-gray-300 focus:border-black focus:ring-0 rounded-none px-0 py-2 bg-transparent">
-                        <option value="">Select a package</option>
-                        <option value="classic">Classic</option>
-                        <option value="deluxe">Deluxe</option>
-                        <option value="signature">Signature</option>
-                    </select>
-                </div>
-
-                <div>
-                    <label for="country" class="block mb-2 uppercase text-gray-600">
-                        Country
-                    </label>
-                    <input type="text" id="country" name="country" placeholder="Italy, Mexico, USA..."
-                        class="w-full border-b border-gray-300 focus:border-black focus:ring-0 rounded-none px-0 py-2 bg-transparent placeholder-gray-400" />
-                </div>
-
-                <div>
-                    <label for="state" class="block mb-2 uppercase text-gray-600">
-                        State / Region
-                    </label>
-                    <input type="text" id="state" name="state" placeholder="Tuscany, Jalisco, California..."
-                        class="w-full border-b border-gray-300 focus:border-black focus:ring-0 rounded-none px-0 py-2 bg-transparent placeholder-gray-400" />
-                </div>
-
-                <div>
-                    <label for="venue" class="block mb-2 uppercase text-gray-600">
-                        Venue
-                    </label>
-                    <input type="text" id="venue" name="venue" placeholder="Villa Balbiano, Casa Hyder..."
-                        class="w-full border-b border-gray-300 focus:border-black focus:ring-0 rounded-none px-0 py-2 bg-transparent placeholder-gray-400" />
-                </div>
-            </form>
-        </div> -->
     </div>
 
     <div class="text-center">
@@ -147,37 +107,7 @@
             Check pricing
         </app-buttons>
     </div>
-</section>
-
-<section class="about relative py-10 mb-6">
-    <h1 class="text-center uppercase mt-1 mb-6">About</h1>
-    <div class="max-w-4xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
-
-        <div>
-            <h2 class="font-serif font-light text-3xl md:text-4xl leading-snug mb-6">
-                Guadalajara-based photographer capturing timeless, emotive stories
-            </h2>
-            <p class="text-gray-600 mb-4">
-                With a passion for light, detail, and human connection, I craft images that feel both effortless and
-                intentional.
-            </p>
-            <p class="text-gray-600 mb-6">
-                Every session is a collaboration — a space where you can be yourself while I quietly frame moments that
-                will become part of your legacy.
-            </p>
-            <app-buttons routerLink="/about" color="primary" size="md" variant="solid">
-                Meet Celeste
-            </app-buttons>
-        </div>
-
-        <div class="relative">
-            <div class="absolute -top-6 -left-6 w-32 h-32 bg-sand/20 rounded-full -z-10"></div>
-            <img src="assets/about.jpg" alt="Celeste" class="rounded-3xl shadow-lg object-cover w-full h-auto">
-        </div>
-    </div>
-
-    <!-- <div class="absolute bottom-0 left-0 right-0 h-1/3 bg-gradient-to-t from-blue-mid/10 to-transparent -z-20"></div> -->
-</section>
+</section> -->
 
 <section class="details py-10 mb-6">
     <h1 class="text-center uppercase mt-1 mb-6">Details</h1>
@@ -204,6 +134,32 @@
             </div>
         </div>
         }
+    </div>
+</section>
+
+<section class="about relative py-10 mb-6">
+    <h1 class="text-center uppercase mt-1 mb-6">About</h1>
+    <div class="max-w-4xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
+
+        <div>
+            <h2 class="font-serif font-light text-3xl md:text-4xl leading-snug mb-6">
+                I'm a wedding photographer based in Guadalajara, Mexico, available to capture memories worldwide.
+            </h2>
+            <p class="text-sm text-gray-600 mb-6">
+                With over six years of experience, I capture love stories with artistry, skill, and soul &#8212; from hometown
+                celebrations to unforgettable destination weddings. My natural, social approach helps every couple feel
+                at ease, creating timeless, candid memories to cherish for a lifetime.
+
+            </p>
+            <app-buttons routerLink="/about" color="primary" size="md" variant="solid">
+                Meet Celeste
+            </app-buttons>
+        </div>
+
+        <div class="relative">
+            <div class="absolute -top-6 -left-6 w-32 h-32 bg-sand/20 rounded-full -z-10"></div>
+            <img src="assets/celeste-2.jpeg" alt="Celeste" class="rounded-3xl shadow-lg object-cover w-full h-auto">
+        </div>
     </div>
 </section>
 
