--- a/src/app/features/home/home-page/home-page.scss
+++ b/src/app/features/home/home-page/home-page.scss
@@ -1,3 +1,20 @@
+@keyframes fade-in {
+    from {
+        opacity: 0;
+        transform: scale(1.02);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.animate-fade-in {
+    animation: fade-in 1.2s ease-out;
+}
+
+
 .booking {
     .calendar-text-font {
         font-family: "DM Sans";
